# PriceStorage

./: .gitignore  README.md  alembic.ini  app.py  config.py  pyproject.toml  requirements.txt
app/: app.py
app/src/: database.py  depends.py
app/src/models/: categories.py  enums.py  products.py
app/src/repositories/: categories.py  products.py
app/src/routing/: categories.py  products.py
app/src/schemas/: categories.py  products.py
app/src/services/: categories.py  products.py
migrations/: env.py
src/: app.py  database.py  depends.py
src/models/: categories.py  products.py
src/repositories/: categories.py  products.py
src/routing/: categories.py  products.py
src/schemas/: categories.py  products.py
src/services/: categories.py  products.py
src/utils/: table_utils.py
