[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <slava20031112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
psycopg2 = "^2.9.9"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
